# Certification

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  vercel.json
.claude/: settings.json  settings.local.json
api/: index.rs
frontend/: .env.example  index.html  package.json  tsconfig.app.json
frontend/src/: App.vue
frontend/src/api/: auth.ts  certifications.ts  client.ts  goals.ts  users.ts
frontend/src/assets/: main.css
frontend/src/components/: CertAutocomplete.vue  NavBar.vue  UserCard.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
frontend/src/views/: DashboardView.vue  GoalView.vue  LoginView.vue  MyCertView.vue  SignupView.vue  UsersView.vue
src/: config.rs  error.rs  lib.rs
src/handlers/: auth.rs  catalog.rs  certifications.rs  favorites.rs  goals.rs  mod.rs  users.rs
src/middleware/: auth.rs
src/models/: catalog.rs  cert.rs  favorite.rs  goal.rs  mod.rs  session.rs  user.rs
src/utils/: hash.rs
supabase/migrations/: 001_init.sql
