[package]
name = "shikaku"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "index"
path = "api/index.rs"

[dependencies]
vercel_runtime = "1"
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
http = "1"
bytes = "1"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
